# vscode-timeline-extractor

./: .gitignore  LICENSE  README.md  pyproject.toml
vscode-extension/: .vscodeignore  CHANGELOG.md  README.md  package-lock.json  package.json
vscode-extension/src/: commands.ts  constants.ts  extension.ts  extractor.ts  models.ts  utils.ts
vscode-extension/src/treeViews/: filesTreeProvider.ts  index.ts  versionsTreeProvider.ts
vscode_timeline_extractor/: __init__.py  __main__.py  cli.py  constants.py  extractor.py  models.py  utils.py
