[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vscode-timeline-extractor"
version = "1.0.0"
description = "Extract and reconstruct files from VS Code's Timeline / local history"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "GitHub Copilot"}
]
keywords = [
    "vscode",
    "timeline",
    "history",
    "backup",
    "recovery",
    "cli",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: Utilities",
]

[project.scripts]
vscode-timeline-extractor = "vscode_timeline_extractor.cli:main"

[project.urls]
Homepage = "https://github.com/ahanfybekheet/vscode-timeline-extractor"
Repository = "https://github.com/ahanfybekheet/vscode-timeline-extractor"
Issues = "https://github.com/ahanfybekheet/vscode-timeline-extractor/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["vscode_timeline_extractor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
